added comments in the reflection part of notebook

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -707,7 +707,12 @@
     "\n",
     "Congratulations on finding the lane lines!  As the final step in this project, we would like you to share your thoughts on your lane finding pipeline... specifically, how could you imagine making your algorithm better / more robust?  Where will your current algorithm be likely to fail?\n",
     "\n",
-    "Please add your thoughts below,  and if you're up for making your pipeline more robust, be sure to scroll down and check out the optional challenge video below!\n"
+    "Please add your thoughts below,  and if you're up for making your pipeline more robust, be sure to scroll down and check out the optional challenge video below!\n",
+    "\n",
+    "\n",
+    "Comments:\n",
+    "1.I have designed my pipeline according to the lessons in which we learnt that first detect edges,then line and then draw those lines.\n",
+    "2.Here we have converted the image to grayscale and then detected the variations in intensites. Instead of converting into grayscale we can convert it into another color space and try with those.I think grayscale would not work when there is shadow in the video/images.\n"
    ]
   },
   {
